--- a/src/Resources/views/academic-year/edit.html.twig
+++ b/src/Resources/views/academic-year/edit.html.twig
@@ -7,10 +7,11 @@
     baseURL: 'school_admin',
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
+        {uri: 'school_admin__academic_year_manage', name: 'Manage Academic Years'},
     ],
-    title: 'Academic Year Manage', domain: 'SchoolAdmin'} %}
+    title: 'Edit Academic Year', domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
-    <div id="paginationContent"></div>
+    <div id="formContent"></div>
 {% endblock content %}
