--- a/src/Resources/views/academic-year-term/manage.html.twig
+++ b/src/Resources/views/academic-year-term/manage.html.twig
@@ -7,11 +7,11 @@
     baseURL: 'school_admin',
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
-        {uri: 'school_admin__academic_year_manage', name: 'Manage Academic Years'},
     ],
-    title: (year.id > 0 ? 'Edit Academic Year' : 'Add Academic Year'), domain: 'SchoolAdmin'} %}
+    title: 'Manage Terms', domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
-    <div id="formContent"></div>
+    <button class="close-button gray" title="{{ 'Add'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__academic_year_term_add') }}','_self')"><span class="fas fa-plus-circle fa-fw"/></button>
+    <div id="paginationContent"></div>
 {% endblock content %}
