Days of the Week

--- a/src/Resources/views/academic-year/edit.html.twig
+++ b/src/Resources/views/academic-year/edit.html.twig
@@ -13,5 +13,6 @@
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
+    <button class="close-button gray" title="{{ 'Return'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__academic_year_manage') }}','_self')"><span class="fas fa-reply fa-fw"/></button>
     <div id="formContent"></div>
 {% endblock content %}
