--- a/src/Resources/views/special-day/manage.html.twig
+++ b/src/Resources/views/special-day/manage.html.twig
@@ -12,5 +12,6 @@
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
+    <button class="close-button gray" title="{{ 'Add'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__special_day_add') }}','_self')"><span class="fas fa-plus-circle fa-fw"/></button>
     <div id="paginationContent"></div>
 {% endblock content %}
