--- a/src/Resources/views/special-day/edit.html.twig
+++ b/src/Resources/views/special-day/edit.html.twig
@@ -14,5 +14,6 @@
 
 {% block content %}
     <button class="close-button gray" title="{{ 'Return'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__special_day_manage') }}','_self')"><span class="fas fa-reply fa-fw"/></button>
+    <button class="close-button gray" title="{{ 'Add'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__special_day_add') }}','_self')"><span class="fas fa-plus-circle fa-fw"/></button>
     <div id="formContent"></div>
 {% endblock content %}
