Tracking Management External Assessment Management

--- a/src/Resources/views/facility/settings.html.twig
+++ b/src/Resources/views/facility/settings.html.twig
@@ -8,7 +8,7 @@
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
     ],
-    title: 'Faciliy Settings', domain: 'SchoolAdmin'} %}
+    title: 'Facility Settings', domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
