--- a/src/Resources/views/assessment/settings.html.twig
+++ b/src/Resources/views/assessment/settings.html.twig
@@ -21,13 +21,13 @@
                 </th>
             </tr>
             <tr class="break flex flex-col sm:flex-row justify-between content-center p-0"">
-                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0">
+                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0" style="width: 20%">
                     {{'Year Group'|trans}}
                 </th>
-                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0">
+                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0" style="width: 40%">
                     {{'External Assessment'|trans}}
                 </th>
-                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0">
+                <th class="flex-grow justify-center px-2 border-b-0 sm:border-b border-t-0" style="width: 40%">
                     {{'Field Set'|trans}}
                 </th>
             </tr>
