Scale Grade Completed
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/views/scale/edit.html.twig
+++ b/src/Resources/views/scale/edit.html.twig
@@ -7,7 +7,7 @@
     baseURL: 'school_admin',
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
-        {uri: 'school_admin__house_manage', name: 'Manage Houses'},
+        {uri: 'school_admin__house_manage', name: 'Manage Scales'},
     ],
     title: (scale.id > 0 ? 'Edit Scale' : 'Add Scale'), domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
