Finance Settings Completed
Signed-off-by: Craig Rayner <craig@craigrayner.com>

--- a/src/Resources/views/finance/settings.html.twig
+++ b/src/Resources/views/finance/settings.html.twig
@@ -8,7 +8,7 @@
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
     ],
-    title: 'Messenger Settings', domain: 'SchoolAdmin'} %}
+    title: 'Finance Settings', domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
