--- a/src/Resources/views/house/edit.html.twig
+++ b/src/Resources/views/house/edit.html.twig
@@ -7,7 +7,7 @@
     baseURL: 'school_admin',
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
-        {uri: 'school_admin__house_manage', name: 'Manage Houses'},
+        {uri: 'school_admin__house_manage', name: 'Houses'},
     ],
     title: (house.id > 0 ? 'Edit House' : 'Add House'), domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
