--- a/src/Resources/views/file-extension/manage.html.twig
+++ b/src/Resources/views/file-extension/manage.html.twig
@@ -8,10 +8,10 @@
     crumbs: [
         {uri: 'school_admin__academic_year_manage', name: 'School Admin'},
     ],
-    title: 'Houses', domain: 'SchoolAdmin'} %}
+    title: 'File Extensions', domain: 'SchoolAdmin'} %}
 {% set breadcrumbs = 'new' %}
 
 {% block content %}
-    <button class="close-button gray" title="{{ 'Add'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__house_add') }}','_self')"><span class="fas fa-plus-circle fa-fw"/></button>
+    <button class="close-button gray" title="{{ 'Add'|trans({}, 'messages') }}" type="button" onclick="window.open('{{ path('school_admin__file_extensions_add') }}','_self')"><span class="fas fa-plus-circle fa-fw"/></button>
     <div id="paginationContent"></div>
 {% endblock content %}
